...
import com.kidor.vigik.data.bluetooth.model.BluetoothDevice
import com.kidor.vigik.data.bluetooth.model.BluetoothDeviceType
import com.kidor.vigik.ui.base.ObserveViewState
import com.kidor.vigik.ui.theme.AppTheme
import com.kidor.vigik.ui.theme.dimensions

internal const val BLUETOOTH_ICON_ENABLE_TEST_TAG = "bluetooth_icon_enable"
internal const val BLUETOOTH_ICON_DISABLE_TEST_TAG = "bluetooth_icon_disable"
internal const val LOCATION_ICON_ENABLE_TEST_TAG = "location_icon_enable"
internal const val LOCATION_ICON_DISABLE_TEST_TAG = "location_icon_disable"
internal const val REFRESH_DEVICES_ICON_TEST_TAG = "refresh_devices_icon"
internal const val CIRCULAR_PROGRESS_TEST_TAG = "circular progress"
internal const val SCAN_ERROR_MESSAGE_TEST_TAG = "scan_error_message"

/**
 * View that display the section dedicated to Bluetooth.
 */
@OptIn(ExperimentalPermissionsApi::class)
@Composable
...
