<resources>
    <string name="app_name">Vigik Pirate</string>
    <string name="menu_action_back" translatable="false">Back</string>
    <string name="menu_action_app_info" translatable="false">App info</string>
    <string name="menu_action_invert_color" translatable="false">Invert colors</string>
    <string name="app_about_popup_text">*** APP INFO ***
        \n\nThis app is a demo application made to improve my personal skills in Android development and to test
        various design patterns, concepts, libraries, etc…
        \n\n- Version: %s -</string>

    <!-- HOME -->
    <string name="home_title">Home</string>

    <!-- Animations -->
    <string name="animations_hub_title">Animations</string>
    <!-- Animation - Carousel -->
    <string name="animation_carousel_title">Carousel</string>
    <string name="carousel_mode_classic">Classic</string>
    <string name="carousel_mode_zoom">Zoom</string>
    <string name="carousel_mode_cube">3D Cube</string>
    <string name="carousel_mode_circle_reveal">Circle Reveal</string>
    <string name="carousel_mode_decal">Decal</string>
    <!-- Animation - Circle loader -->
    <string name="animation_circle_loader_title">Circle loader</string>
    <!-- Animation - Following arrows -->
    <string name="animation_following_arrows_title">Following Arrows</string>
    <!-- Animation - Gauge -->
    <string name="animation_gauge_title">Gauge</string>
    <!-- Animation - Glitter rainbow -->
    <string name="animation_glitter_rainbow_title">Glitter Rainbow</string>
    <string name="animation_glitter_rainbow_speed_coefficient_label">Speed</string>
    <string name="animation_glitter_rainbow_life_time_label">Life time</string>
    <string name="animation_glitter_rainbow_source_label">Source: https://github.com/maiatoday/GrooveIsInTheHeart</string>
    <!-- Animation - Lookahead -->
    <string name="animation_lookahead_title">Lookahead</string>
    <!-- Animation - Pulse -->
    <string name="animation_pulse_title">Pulse</string>
    <string name="animation_pulse_button_label">Button</string>
    <!-- Animation - Shape -->
    <string name="animation_shape_title">Shape</string>
    <!-- Animation - Shimmer -->
    <string name="animation_shimmer_title">Shimmer</string>
    <!-- Animation - Snowfall -->
    <string name="animation_snowfall_title">Snowfall</string>
    <!-- Animation - Typewriter -->
    <string name="animation_typewriter_title">Typewriter</string>

    <!-- CAR -->
    <string name="car_app_name">Vigik Auto</string>
    <string name="car_need_permissions_title">Need permissions</string>
    <string name="car_need_permissions_message">Please check your mobile and enable required permissions</string>
    <string name="car_need_permissions_ok_action_label">OK</string>
    <string name="car_car_api_level_action_label">API level</string>
    <string name="car_car_api_level_toast_message">Car API level: %d</string>
    <string name="car_hardware_data_error_title">Error</string>
    <string name="car_hardware_data_error_message">An error occurred when gathering car data</string>
    <string name="car_hardware_data_error_ok_action_label">OK</string>
    <string name="car_car_info_label">Car info</string>
    <string name="car_car_info_model_label">Model</string>
    <string name="car_car_info_model_value">Name: %s, Year: %s, Manufacturer: %s</string>
    <string name="car_car_info_energy_level_label">Energy level</string>
    <string name="car_car_info_energy_level_value">Battery percent: %s, Fuel percent: %s, Energy is low: %s, Range remaining: %s, Distance display unit: %s, Fuel volume display unit: %s</string>
    <string name="car_car_info_speed_label">Speed</string>
    <string name="car_car_info_speed_value">Raw speed: %s, Display speed: %s, Speed display unit: %s</string>
    <string name="car_car_info_mileage_label">Mileage</string>
    <string name="car_car_sensors_label">Sensors</string>
    <string name="car_car_sensors_accelerometer_forces">Accelerometer forces</string>
    <string name="car_car_sensors_compass_orientations">Compass orientations</string>
    <string name="car_car_sensors_gyroscope_rotations">Gyroscope rotations</string>
    <string name="car_car_sensors_hardware_location">Hardware location</string>
    <string name="car_car_climate_label">Climate</string>
    <string name="car_car_climate_cabin_temperature">Cabin temperature</string>
    <string name="car_car_climate_fan_speed_level">Fan speed level</string>
    <string name="car_data_not_available_label">N/A</string>
    <string name="car_login_label">Login</string>
    <string name="car_login_action_help_label">Help</string>
    <string name="car_login_action_login_label">Login</string>
    <string name="car_login_action_cancel_label">Cancel</string>
    <string name="car_login_hint_text">4 length PIN code</string>
    <string name="car_login_additional_text">Sign in with PIN code</string>
    <string name="car_login_error_message">Wrong PIN code</string>
    <string name="car_login_success_message">Congratulation!</string>

    <!-- Biometric -->
    <string name="biometric_title">Biometric</string>
    <string name="biometric_username_hint">Username</string>
    <string name="biometric_password_hint">Password</string>
    <string name="biometric_login_button_label">Login</string>
    <string name="biometric_login_with_biometric_button_label">Use biometric</string>
    <string name="biometric_login_error_label">Invalid username/password</string>
    <string name="biometric_prompt_enroll_title">Enable Biometric Login?</string>
    <string name="biometric_prompt_enroll_subtitle">Authenticate yourself to enroll your credential</string>
    <string name="biometric_prompt_login_title">Biometric login</string>
    <string name="biometric_prompt_login_subtitle">Log in using your biometric credential</string>
    <string name="biometric_prompt_negative_button_label">Cancel</string>
    <string name="biometric_home_credential_status_label">Biometric credential:</string>
    <string name="biometric_home_credential_remove_button_label">Remove</string>
    <string name="biometric_home_login_success_label">Logged successfully!</string>
    <string name="biometric_home_logout_button_label">Logout</string>

    <!-- BLE -->
    <string name="bluetooth_title">Bluetooth</string>
    <string name="bluetooth_permission_status_label">Permissions granted:</string>
    <string name="bluetooth_permission_request_button_label">Request permission</string>
    <string name="bluetooth_adapter_status_label">Bluetooth enabled:</string>
    <string name="bluetooth_location_status_label">Location enabled:</string>
    <string name="bluetooth_low_energy_scan_status_label">Low Energy scan</string>
    <string name="bluetooth_detected_devices_label">Detected devices</string>
    <string name="bluetooth_start_scan_error_message">Fail to start Bluetooth scan. Please check that Bluetooth is ON!</string>

    <!-- Bottom Sheet -->
    <string name="bottom_sheet_title">Bottom Sheet</string>
    <string name="bottom_sheet_current_state">Current state: %s</string>
    <string name="bottom_sheet_target_state">Target state: %s</string>
    <string name="bottom_sheet_switch_button_hide_label">Hide</string>
    <string name="bottom_sheet_switch_button_show_label">Show</string>
    <string name="bottom_sheet_custom_bottom_sheet_title">Bottom sheet</string>
    <string name="bottom_sheet_switch_button_expand_label">Expand</string>
    <string name="bottom_sheet_switch_button_reduce_label">Reduce</string>

    <!-- Camera -->
    <string name="camera_title">Camera</string>
    <string name="camera_permission_status_label">Permission granted:</string>
    <string name="camera_permission_request_button_label">Request permission</string>
    <string name="camera_retry_capture_button_label">Retry</string>

    <!-- Compass -->
    <string name="compass_title">Compass</string>

    <!-- Emoji -->
    <string name="emoji_title">Emoji</string>

    <!-- NFC -->
    <string name="nfc_title">NFC</string>
    <string name="nfc_check_title">Check NFC</string>
    <string name="nfc_refresh_button_label">Refresh</string>
    <string name="nfc_settings_button_label">Settings</string>
    <string name="nfc_hub_title">HUB</string>
    <string name="nfc_scan_button_label">NFC scan</string>
    <string name="nfc_history_button_label">Tags history</string>
    <string name="nfc_emulate_button_label">Emulate NFC tag</string>
    <string name="nfc_scan_title">Scan NFC</string>
    <string name="nfc_menu_action_stop_scan">Stop</string>
    <string name="nfc_fab_save_scan_result">Save</string>
    <string name="nfc_save_tag_success">Tag saved successfully</string>
    <string name="nfc_save_tag_fail">Fail to save tag</string>
    <string name="nfc_tag_history_title">History</string>
    <string name="nfc_history_no_data_label">No data available</string>
    <string name="nfc_emulate_title">Emulate tag</string>

    <!-- Notification -->
    <string name="notification_title">Notification</string>
    <string name="notification_default_channel_id" translatable="false">notification_default_channel</string>
    <string name="notification_default_channel_name">Default</string>
    <string name="notification_default_channel_description">Default notification channel of the app.</string>
    <string name="notification_permission_status_label">Permission granted:</string>
    <string name="notification_permission_request_button_label">Request permission</string>
    <string name="notification_generated_notification_title">Test notification</string>
    <string name="notification_add_text_content_label">Add text content</string>
    <string name="notification_long_content_label">Long text content</string>
    <string name="notification_generated_notification_short_content" translatable="false">Lorem ipsum</string>
    <string name="notification_generated_notification_long_content" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.</string>
    <string name="notification_add_picture_content_label">Add a picture</string>
    <string name="notification_add_loader_label">Add a loader</string>
    <string name="notification_add_loader_infinite_label">Infinite loader</string>
    <string name="notification_add_action_buttons_label">Add action buttons</string>
    <string name="notification_action_button_1_label">REMOVE</string>
    <string name="notification_action_button_2_label">DO NOTHING</string>
    <string name="notification_action_button_3_label">DISABLE</string>
    <string name="notification_generate_notification_button_label">Generate notification</string>
    <string name="notification_remove_previous_notification_button_label">Remove previous</string>

    <!-- Paging -->
    <string name="paging_title">Paging</string>

    <!-- REST API -->
    <string name="rest_api_title">REST API</string>
    <string name="diablo_boss_name_ashava">Ashava, the Pestilent</string>
    <string name="diablo_boss_name_avarice">Avarice, the God Cursed</string>
    <string name="diablo_boss_name_wandering_death">Wandering Death, the Death Given Life</string>
    <string name="diablo_boss_name_unknown">Unknown boss</string>
    <string name="diablo_boss_next_spawn_label">Next possible spawn in %s</string>
    <string name="diablo_hell_tide_next_rise_label">Next Hell tide in %s</string>
    <string name="diablo_tracker_source_label">Source: %s</string>
    <string name="duration_unit_minute">%s min</string>
    <string name="duration_unit_hour">%s h</string>

    <!-- SnackBar -->
    <string name="snackbar_title">SnackBar</string>
    <string name="snackbar_dummy_action_button_label">Do something</string>
    <string name="snackbar_message">Action done</string>
    <string name="snackbar_action_button_label">Undo</string>
    <string name="snackbar_action_confirmed">Action done permanently</string>
    <string name="snackbar_action_canceled">Action canceled</string>

    <!-- Telephony -->
    <string name="telephony_title">Telephony</string>
    <string name="telephony_permission_status_label">Permissions granted:</string>
    <string name="telephony_permission_request_button_label">Request permission</string>
    <string name="telephony_contact_section_title">Contact</string>
    <string name="telephony_contact_total_number_label">Total number of contacts: %s</string>
    <string name="telephony_contact_mobile_number_label">Number of mobile contacts: %s</string>
    <string name="telephony_sms_section_title">SMS</string>
    <string name="telephony_sms_total_received_label">Received: %s</string>
    <string name="telephony_sms_total_sent_label">Sent: %s</string>
    <string name="telephony_sms_phone_number_hint">Phone number</string>
    <string name="telephony_sms_message_hint">Message…</string>
    <string name="telephony_call_section_title">Calls</string>
    <string name="telephony_call_emitted_label">Emitted: %s</string>
    <string name="telephony_call_received_label">Received: %s</string>
    <string name="telephony_call_ignored_label">Ignored: %s</string>
    <string name="telephony_call_rejected_label">Rejected: %s</string>

    <!-- WIDGET -->
    <string name="widget_diablo_label">Diablo IV WB tracker</string>
    <string name="widget_diablo_loading_data">Loading data…</string>
    <string name="widget_diablo_boos_spawn_label">Next possible spawn</string>
    <string name="widget_diablo_boss_spawn_date_pattern">EEE d MMM \'at\' h:mm a</string>
</resources>